# bits-extra

./: .gitignore  .travis.yml  ChangeLog.md  README.md  bits-extra.cabal  package.yaml  stack.yaml
.circleci/: config.yml
.github/workflows/: haskell.yml
bench/: Main.hs
src/Data/Bits/: BitSize.hs  Pdep.hs  Pext.hs
src/Data/Bits/Pdep/: Prim.hs  Slow.hs
src/Data/Bits/Pext/: Prim.hs  Slow.hs
test/Data/Bits/: PdepSpec.hs  PextSpec.hs
