cabal-version:      2.2

name:               bits-extra
version:            0.0.1.3
synopsis:           Useful bitwise operations
description:        Please see the README on Github at <https://github.com/haskell-works/bits-extra#readme>
category:           Data, Bit
homepage:           https://github.com/haskell-works/bits-extra#readme
bug-reports:        https://github.com/haskell-works/bits-extra/issues
author:             John Ky
maintainer:         newhoggy@gmail.com
copyright:          2018 John Ky
license:            BSD-3-Clause
license-file:       LICENSE
tested-with:        GHC == 8.6.5, GHC == 8.4.4, GHC == 8.2.2
build-type:         Simple
extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/haskell-works/bits-extra

flag bmi2
  description: Enable bmi2 instruction set
  manual: False
  default: False

library
  hs-source-dirs:     src
  ghc-options:        -Wall -O2
  default-language:   Haskell2010
  autogen-modules:    Paths_bits_extra
  exposed-modules:
      Data.Bits.BitSize
      Data.Bits.Pdep
      Data.Bits.Pdep.Slow
      Data.Bits.Pext
      Data.Bits.Pext.Slow
  other-modules:
      Data.Bits.Pdep.Prim
      Data.Bits.Pext.Prim
      Paths_bits_extra
  build-depends:
      base >=4.8 && <5
    , ghc-prim
    , vector
  if (flag(bmi2)) && (impl(ghc >=8.4.1))
    ghc-options: -mbmi2 -msse4.2
    cpp-options: -DBMI2_ENABLED

test-suite bits-extra-test
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  hs-source-dirs:     test
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  autogen-modules:    Paths_bits_extra
  other-modules:
      Data.Bits.PdepSpec
      Data.Bits.PextSpec
      Paths_bits_extra
  build-depends:
      base >=4.8 && <5
    , bits-extra
    , ghc-prim
    , hedgehog
    , hspec
    , hw-hedgehog
    , hw-hspec-hedgehog
  if (flag(bmi2)) && (impl(ghc >= 8.4.1))
    ghc-options: -mbmi2 -msse4.2
  default-language:   Haskell2010
  build-tool-depends: hspec-discover:hspec-discover

benchmark bench
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  other-modules:      Paths_bits_extra
  hs-source-dirs:     bench
  ghc-options:        -Wall -O2
  default-language:   Haskell2010
  autogen-modules:    Paths_bits_extra
  build-depends:
      base >=4.8 && <5
    , bits-extra
    , criterion
    , ghc-prim
    , vector
  if (flag(bmi2)) && (impl(ghc >= 8.4.1))
    ghc-options: -mbmi2 -msse4.2
